--- a/applet.html
+++ b/applet.html
@@ -6,7 +6,7 @@ The applet tag
 </title>
 </head>
 <body>
-<!-- Code attribute is the source file and width and hiehgt define the size of the the applet -->
+<!-- Code attribute is the source file and width and height define the size of the the applet -->
 <applet code="java.class" width="350" height="350">
 </applet>
 </body>
